--- a/Energy_Use.ipynb
+++ b/Energy_Use.ipynb
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Motivation**: The balance between energy consumption and environmental conservation is an important issue for both policymakers and the public. As countries grow and use more energy, it’s important to ask: Is this growth coming at the cost of natural land? **bold text**\n"
+        "**Motivation**: The balance between energy consumption and environmental conservation is an important issue for both policymakers and the public. As countries grow and use more energy, it’s important to ask: Is this growth coming at the cost of natural land?\n"
       ],
       "metadata": {
         "id": "h4yhyKK5iR5b"
