--- a/Energy_Use.ipynb
+++ b/Energy_Use.ipynb
@@ -22,7 +22,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Energy Use Correlation"
+        "### Energy Use Vs Protected Areas Correlation"
       ],
       "metadata": {
         "id": "kYBn_4Zsh52v"
